# Sword.Patched

./: .gitignore  CMakeLists.txt  INSTALL.git.md  Makefile.am  README.md  configure.ac
.github/workflows/: autotools.yml  cmake-msys.yml  cmake-multi-platform.yml  msys2.yml
bindings/Android/SWORD/: build.gradle
bindings/cordova/: README
bindings/cordova/cordova-plugin-crosswire-sword/: package.json  plugin.xml
bindings/gsoap/include/: stdsoap.h
bindings/java-jni/: Makefile
bindings/swig/vstudio/: libsword_csharpsword.vcproj
examples/tasks/: Makefile.am
include/: Makefile.am  filemgr.h  ftplib.h  swversion.h  zconf.h
lib/: Makefile.am
m4/: acx_clucene.m4
src/frontend/: Makefile.am
src/keys/: Makefile.am  versekey.cpp
src/mgr/: Makefile.am  filemgr.cpp  ftplibftpt.cpp  swconfig.cpp  swmgr.cpp
src/modules/: Makefile.am  swmodule.cpp
src/modules/comments/: Makefile.am
src/modules/comments/hrefcom/: Makefile.am
src/modules/comments/rawcom/: Makefile.am
src/modules/comments/rawcom4/: Makefile.am
src/modules/comments/rawfiles/: Makefile.am
src/modules/comments/zcom/: Makefile.am
src/modules/comments/zcom4/: Makefile.am
src/modules/common/: Makefile.am  ioapi.c  rawstr4.cpp  zipcomprs.cpp
src/modules/filters/: Makefile.am  cipherfil.cpp  gbfstrongs.cpp  gbfwordjs.cpp  greeklexattribs.cpp  latin1utf16.cpp  latin1utf8.cpp  osisstrongs.cpp  scsuutf8.cpp  thmlstrongs.cpp  thmlwordjs.cpp  utf8arshaping.cpp  utf8bidireorder.cpp  utf8html.cpp  utf8latin1.cpp  utf8nfc.cpp  utf8nfkd.cpp  utf8scsu.cpp
src/modules/genbook/: Makefile.am
src/modules/genbook/rawgenbook/: Makefile.am
src/modules/lexdict/: Makefile.am
src/modules/lexdict/rawld/: Makefile.am
src/modules/lexdict/rawld4/: Makefile.am
src/modules/lexdict/zld/: Makefile.am
src/modules/texts/: Makefile.am
src/modules/texts/rawtext/: Makefile.am
src/modules/texts/rawtext4/: Makefile.am
src/modules/texts/ztext/: Makefile.am
src/modules/texts/ztext4/: Makefile.am
src/utilfuns/: Makefile.am  ftplib.c  regex.c
tests/: Makefile.am  translittest.cpp
tests/testsuite/: CMakeLists.txt
utilities/: installmgr.cpp  osis2mod.cpp
utilities/diatheke/: Makefile.am  diathekemgr.cpp  diathekemgr.h
